# python-practice

./: .gitignore  Pipfile  README.md  algorithms.ipynb  codewars.ipynb  computer_vision.ipynb  dive_into_python.ipynb  django.ipynb  django_documentation.ipynb  epstein_release.py  flask.ipynb  multiprocessing.ipynb  numpy.ipynb  optimization.ipynb  project_euler.ipynb  pydantic_omit_and_pick.py  pyproject.toml  python_quirks.ipynb  regex.ipynb  the_python_challenge.ipynb  think_python.ipynb
